--- a/french/styles.css
+++ b/french/styles.css
@@ -25,26 +25,30 @@ header h4 {
 .verb-block {
     display: inline-block;
     margin: 0em 1em;
-    vertical-align: top;
 }
 
 .verb-block label {
     width: 2.5em;
     font-size: 1em;
-    display: inline-block;
+    display: flex;
+    align-items: center;
 }
 
 input {
     font-size: 1em;
     width: 8em;
+    margin: 0 0.25em;
 }
 
 .speakerphone {
     fill: rgb(95, 99, 104);
+    display: flex;
+    align-items: center;
 }
 
-.verb-block div {
+.verb-block .conjugation-line {
     margin: 1em 0;
+    display: flex;
 }
 
 .error,
