--- a/french/styles.css
+++ b/french/styles.css
@@ -25,7 +25,8 @@ header h4 {
 .verb-block {
     display: inline-block;
     margin: 0em 1em;
-    vertical-align: top; /* if not all pronouns are used. Example: falloir - il faudra */
+    vertical-align: top;
+    /* if not all pronouns are used. Example: falloir - il faudra */
 }
 
 .verb-block label {
@@ -59,41 +60,50 @@ input:invalid:not(:focus) {
 
 
 /* Text exercises */
-.text {
-    
-}
+
 .text h2 {
     color: #007f00;
     text-align: center;
 }
+
 .text h3 {
     color: #2a5f6e;
     font-size: 1.25em;
     text-align: center;
 }
+
 .text h4 {
     color: #2a5f6e;
     font-size: 1.2em;
     text-align: left;
 }
+
 .text p {
     line-height: 2;
     text-align: left;
 }
 
+.text input {
+    font-size: 1em;
+}
+
 .text section {
     margin-bottom: 3em;
 }
+
 .text ol {
     padding-left: 1em;
 }
+
 .text li {
     margin-bottom: 1em;
 }
+
 .text section span {
     display: inline-block;
     width: 49%;
 }
+
 .text section li span:nth-of-type(2) {
     margin-left: -0.5em;
     display: inline-flex;
@@ -104,6 +114,7 @@ input:invalid:not(:focus) {
     margin: 0 0.25em 0 0.5em;
     width: 5em;
 }
+
 .whitespace {
     width: 5em !important;
 }
@@ -126,7 +137,9 @@ input:invalid:not(:focus) {
     }
 
     .speakerphone svg {
-        width: 25px; /* original 20 */
-        height: 25px; /* original 20 */
+        width: 25px;
+        /* original 20 */
+        height: 25px;
+        /* original 20 */
     }
 }
