--- a/french/styles.css
+++ b/french/styles.css
@@ -22,7 +22,7 @@ header h4 {
     padding: 0 2em;
 }
 
-.verb-block {
+.verb-list .verb-block, .conjugations-for-one-tense-block {
     display: inline-block;
     margin: 0em 1em;
     vertical-align: top;
@@ -36,7 +36,7 @@ header h4 {
     align-items: center;
 }
 
-.verb-list input {
+.verb-list input, .conjugations-for-one-tense-block input {
     font-size: 1em;
     width: 8em;
     margin: 0 0.25em;
