--- a/french/styles.css
+++ b/french/styles.css
@@ -134,7 +134,18 @@ header label:last-of-type {
     display: inline-block;
     width: 49%;
 }
-
+.text section span.sentence-with-hint,
+.text section span.hint {
+    width: auto;
+    display: inline !important;
+    margin-left: auto !important;
+}
+.text section span.sentence-with-hint input {
+    margin: auto;
+}
+.on span.hint {
+background-color: yellow;
+}
 .text section li span:nth-of-type(2) {
     margin-left: -0.5em;
     display: inline-flex;
