added saving Error Counter into localStorage

--- a/french/pages/partials/errorCounter.html
+++ b/french/pages/partials/errorCounter.html
@@ -1,4 +1,11 @@
 <footer>
     <hr />
     <h4>Errors: <span id="number-of-errors">0</span></h4>
+
+    Stats:
+    <div id="stats">
+        <template id="template-stats-line">
+            <div class="stats-line"></div>
+        </template>
+    </div>
 </footer>
