refactored error counter footer

--- a/french/pages/partials/errorCounter.html
+++ b/french/pages/partials/errorCounter.html
@@ -1,6 +1,6 @@
 <footer>
     <hr />
-    <h4>Errors: <span id="number-of-errors">0</span></h4>
+    <h4>Résultat: <span id="result">0</span>% (<span id="number-of-errors">0</span> erreurs)</h4>
 
     Stats:
     <div id="stats">
