--- a/french/pages/partials/errorCounter.html
+++ b/french/pages/partials/errorCounter.html
@@ -2,7 +2,7 @@
     <hr />
     <h4>Résultat: <span id="result">0</span>% (<span id="number-of-errors">0</span> erreurs)</h4>
 
-    Stats:
+    Statistiques:
     <div id="stats">
         <template id="template-stats-line">
             <div class="stats-line"></div>
