added complex (multi-line) error counter

--- a/french/pages/partials/errorCounter.html
+++ b/french/pages/partials/errorCounter.html
@@ -1,6 +1,14 @@
-<footer>
+<footer class="error-counter">
     <hr />
-    <h4>Résultat: <span id="result">0</span>% (<span id="number-of-errors">0</span> erreurs)</h4>
+    <h4 id="error-counter-" class="error-counter-line">Résultat: <span class="result">0</span>% (<span class="number-of-errors">0</span> erreurs)</h4>
+
+    <h4 id="error-counter-present" class="error-counter-line">Résultat pour le présent: <span class="result">0</span>% (<span class="number-of-errors">0</span> erreurs)</h4>
+    <h4 id="error-counter-presentperfect" class="error-counter-line">Résultat pour le passé composé: <span class="result">0</span>% (<span class="number-of-errors">0</span> erreurs)</h4>
+    <h4 id="error-counter-imperfect" class="error-counter-line">Résultat pour l'imparfait: <span class="result">0</span>% (<span class="number-of-errors">0</span> erreurs)</h4>
+    <h4 id="error-counter-future" class="error-counter-line">Résultat pour le futur simple: <span class="result">0</span>% (<span class="number-of-errors">0</span> erreurs)</h4>
+    <h4 id="error-counter-conditionalpresent" class="error-counter-line">Résultat pour le conditionnel présent: <span class="result">0</span>% (<span class="number-of-errors">0</span> erreurs)</h4>
+    <h4 id="error-counter-conditionalperfect" class="error-counter-line">Résultat pour le conditionnel passé: <span class="result">0</span>% (<span class="number-of-errors">0</span> erreurs)</h4>
+
 
     Statistiques:
     <div id="stats">
