--- a/french/pages/partials/errorCounter.html
+++ b/french/pages/partials/errorCounter.html
@@ -1,13 +1,29 @@
 <footer class="error-counter">
     <hr />
-    <h4 id="error-counter-" class="error-counter-line">Résultat: <span class="result">0</span>% (<span class="number-of-errors">0</span> erreurs)</h4>
-
-    <h4 id="error-counter-present" class="error-counter-line">Résultat pour le présent: <span class="result">0</span>% (<span class="number-of-errors">0</span> erreurs)</h4>
-    <h4 id="error-counter-presentperfect" class="error-counter-line">Résultat pour le passé composé: <span class="result">0</span>% (<span class="number-of-errors">0</span> erreurs)</h4>
-    <h4 id="error-counter-imperfect" class="error-counter-line">Résultat pour l'imparfait: <span class="result">0</span>% (<span class="number-of-errors">0</span> erreurs)</h4>
-    <h4 id="error-counter-future" class="error-counter-line">Résultat pour le futur simple: <span class="result">0</span>% (<span class="number-of-errors">0</span> erreurs)</h4>
-    <h4 id="error-counter-conditionalpresent" class="error-counter-line">Résultat pour le conditionnel présent: <span class="result">0</span>% (<span class="number-of-errors">0</span> erreurs)</h4>
-    <h4 id="error-counter-conditionalperfect" class="error-counter-line">Résultat pour le conditionnel passé: <span class="result">0</span>% (<span class="number-of-errors">0</span> erreurs)</h4>
+    <h4 id="error-counter-" class="error-counter-line">Résultat:
+        <span class="result">0</span>% (<span class="number-of-errors">0</span> erreurs)
+    </h4>
+    <h4 id="error-counter-present" class="error-counter-line">Résultat pour le présent:
+        <span class="result">0</span>% (<span class="number-of-errors">0</span> erreurs)
+    </h4>
+    <h4 id="error-counter-presentperfect" class="error-counter-line">Résultat pour le passé composé:
+        <span class="result">0</span>% (<span class="number-of-errors">0</span> erreurs)
+    </h4>
+    <h4 id="error-counter-imperfect" class="error-counter-line">Résultat pour l'imparfait:
+        <span class="result">0</span>% (<span class="number-of-errors">0</span> erreurs)
+    </h4>
+    <h4 id="error-counter-future" class="error-counter-line">Résultat pour le futur simple:
+        <span class="result">0</span>% (<span class="number-of-errors">0</span> erreurs)
+    </h4>
+    <h4 id="error-counter-pastperfect" class="error-counter-line">Résultat pour le plus-que-parfait:
+        <span class="result">0</span>% (<span class="number-of-errors">0</span> erreurs)
+    </h4>
+    <h4 id="error-counter-conditionalpresent" class="error-counter-line">Résultat pour le conditionnel présent:
+        <span class="result">0</span>% (<span class="number-of-errors">0</span> erreurs)
+    </h4>
+    <h4 id="error-counter-conditionalperfect" class="error-counter-line">Résultat pour le conditionnel passé:
+        <span class="result">0</span>% (<span class="number-of-errors">0</span> erreurs)
+    </h4>
 
 
     Statistiques:
