red border around input text box if it had error before

--- a/french/styles.css
+++ b/french/styles.css
@@ -66,9 +66,12 @@ header h4 {
     display: flex;
 }
 
-.error,
 input:invalid:not(:focus) {
     background-color: #fc8181;
+}
+
+input.failed {
+    border: 2px #fc8181 solid;
 }
 
 
