added goHomeIcon to the top left corner

--- a/french/styles.css
+++ b/french/styles.css
@@ -15,6 +15,19 @@ body main.wide {
     width: 77em;
 }
 
+.home-icon {
+    position: absolute;
+    left: 1em;
+    top: 1em;
+}
+
+.home-icon svg {
+    width: 30px;
+    /* original 50 */
+    height: 30px;
+    /* original 50 */
+}
+
 #page-title {
     text-align: center;
 }
