added 'total time' line to footer

--- a/french/pages/partials/errorCounter.html
+++ b/french/pages/partials/errorCounter.html
@@ -30,13 +30,13 @@
     </h4>
     <h4 id="error-counter-conditionalperfect" class="error-counter-line">Résultat pour le conditionnel passé:
         <span class="result">0</span>% (<span class="number-of-errors">0</span> erreurs)
-    </h4>
 
+        <h4>Total time: <span id="total-time"></span></h4>
 
-    Statistiques:
-    <div id="stats">
-        <template id="template-stats-line">
-            <div class="stats-line"></div>
-        </template>
-    </div>
+        Statistiques:
+        <div id="stats">
+            <template id="template-stats-line">
+                <div class="stats-line"></div>
+            </template>
+        </div>
 </footer>
