--- a/french/styles.css
+++ b/french/styles.css
@@ -163,6 +163,20 @@ header label:last-of-type {
     width: 49%;
 }
 
+.text .span-third span {
+    display: inline-block;
+    width: 32%;
+}
+
+.text .span-half div span:nth-of-type(2) { /* line for given example for exercise */
+    box-sizing: border-box;
+    padding-left: 0.5em;
+}
+.text .span-third div span:nth-of-type(2) { /* line for given example for exercise */
+    box-sizing: border-box;
+    padding-left: 0.5em;
+}
+
 .text section span.sentence-with-hint,
 .text section span.hint {
     width: auto;
@@ -178,19 +192,22 @@ header label:last-of-type {
     background-color: yellow;
 }
 
-.text section li span:nth-of-type(2) {
-    margin-left: -0.5em;
+.text section li span:nth-of-type(2), .text section li span:nth-of-type(3) {
     display: inline-flex;
 }
 
 .text section li span input {
     flex-grow: 1;
-    margin: 0 0.25em 0 0.5em;
+    margin: 0 0.25em 0 0em;
 }
 
 .whitespace {
     display: inline-block;
     width: 5em !important;
+}
+.whitespace-mini {
+    display: inline-block;
+    width: 1em !important;
 }
 
 .error-counter-line {
