changed 'total time' to 'durée'

--- a/french/pages/partials/errorCounter.html
+++ b/french/pages/partials/errorCounter.html
@@ -35,7 +35,7 @@
         <span class="result">0</span>% (<span class="number-of-errors">0</span> erreurs)
     </h4>
 
-    <h4>Total time: <span id="total-time"></span></h4>
+    <h4>Durée: <span id="total-time"></span></h4>
 
     Statistiques:
     <div id="stats">
