made stats at the bottom a numbered list

--- a/french/pages/partials/errorCounter.html
+++ b/french/pages/partials/errorCounter.html
@@ -38,9 +38,9 @@
     <h4>Durée: <span id="total-time"></span></h4>
 
     Statistiques:
-    <div id="stats">
+    <ol id="stats">
         <template id="template-stats-line">
-            <div class="stats-line"></div>
+            <li class="stats-line"></li>
         </template>
-    </div>
+    </ol>
 </footer>
