--- a/french/pages/partials/errorCounter.html
+++ b/french/pages/partials/errorCounter.html
@@ -28,6 +28,9 @@
     <h4 id="error-counter-conditionalpresent" class="error-counter-line">Résultat pour le conditionnel présent:
         <span class="result">0</span>% (<span class="number-of-errors">0</span> erreurs)
     </h4>
+    <h4 id="error-counter-presentsubjunctive" class="error-counter-line">Résultat pour le subjonctif présent:
+        <span class="result">0</span>% (<span class="number-of-errors">0</span> erreurs)
+    </h4>
     <h4 id="error-counter-conditionalperfect" class="error-counter-line">Résultat pour le conditionnel passé:
         <span class="result">0</span>% (<span class="number-of-errors">0</span> erreurs)
     </h4>
