--- a/french/pages/partials/errorCounter.html
+++ b/french/pages/partials/errorCounter.html
@@ -40,10 +40,10 @@
 
     <h4>Durée: <span id="total-time"></span></h4>
 
-    Statistiques:
-    <ol id="stats">
-        <template id="template-stats-line">
-            <li class="stats-line"></li>
-        </template>
-    </ol>
+    <span id="stats-title">Statistiques:</span>
+    <ol id="stats"></ol>
+
+    <template id="template-stats-line">
+        <li class="stats-line"></li>
+    </template>
 </footer>
