don't show checkboxes on mixed conjugation page if it's called for one tense

--- a/french/styles.css
+++ b/french/styles.css
@@ -90,6 +90,10 @@ input.failed:not(:invalid) {
 
 /* Mixed conjugation page */
 
+#checkboxes-to-choose-tenses {
+    display: none;
+}
+
 header label {
     display: inline-block;
     width: 24%;
