--- a/french/styles.css
+++ b/french/styles.css
@@ -7,7 +7,7 @@ body {
 }
 
 body main {
-    width: 47em;
+    width: 50em;
     margin: auto;
 }
 
@@ -253,6 +253,15 @@ ol#stats {
 
 .on span.hint {
     background-color: yellow;
+}
+
+.text section li {
+    clear: both;
+}
+
+.text section li span:nth-of-type(1) {
+    float: left;
+    /* for top vertical alignement of order number in <li> */
 }
 
 .text section li span:nth-of-type(2),
