--- a/french/styles.css
+++ b/french/styles.css
@@ -93,6 +93,15 @@ input.failed:not(:invalid) {
     border: 2px #fc8181 solid;
 }
 
+/* for radio button */
+label.failed:has(input:checked) {
+    background-color: #fc8181;
+}
+
+label.failed {
+    border: 2px #fc8181 solid;
+}
+
 
 /* Mixed conjugation page */
 
@@ -158,7 +167,7 @@ header label:last-of-type {
     text-align: left;
 }
 
-.text input {
+.text input[type="text"] {
     font-size: 1em;
     width: 6em;
 }
@@ -271,13 +280,23 @@ ol#stats {
     display: inline-flex;
 }
 
-.text section li span input {
+.text section li span input[type="text"] {
     flex-grow: 1;
     align-self: center;
     margin: 0 0.25em 0 0em;
 
     /* or it will grow because line-height is 2 */
     height: min-content;
+}
+
+/* for input[type="radio"] in present subjunctive */
+.text section li label {
+    width: 6em;
+    margin-right: 2em;
+}
+
+.text section li label:first-of-type {
+    margin-left: -4em;
 }
 
 .whitespace {
