added verb list for future perfect

--- a/french/pages/partials/errorCounter.html
+++ b/french/pages/partials/errorCounter.html
@@ -34,6 +34,9 @@
     <h4 id="error-counter-conditionalperfect" class="error-counter-line">Résultat pour le conditionnel passé:
         <span class="result">0</span>% (<span class="number-of-errors">0</span> erreurs)
     </h4>
+    <h4 id="error-counter-futureperfect" class="error-counter-line">Résultat pour le futur antérieur:
+        <span class="result">0</span>% (<span class="number-of-errors">0</span> erreurs)
+    </h4>
     <h4 id="error-counter-imperative" class="error-counter-line">Résultat pour l'impératif:
         <span class="result">0</span>% (<span class="number-of-errors">0</span> erreurs)
     </h4>
