attempt to fix border rendering issues in sticky table header on stats page

--- a/french/styles.css
+++ b/french/styles.css
@@ -368,6 +368,12 @@ table {
 th {
     position: sticky;
     background-color: white;
+    will-change: transform;
+
+    /* attempt to fix rendering issue when some borders in the headers are not shown */
+    transform: translateZ(0);
+    -webkit-transform: translateZ(0);
+    backface-visibility: hidden;
 }
 
 thead tr:nth-child(1) th {
