highlight best result in stats grid

--- a/french/styles.css
+++ b/french/styles.css
@@ -225,7 +225,9 @@ ol#stats {
     content: counter(item) ") ";
     counter-increment: item;
 }
-#stats .best-result {
+
+#stats .best-result,
+td.best-result {
     font-weight: bold;
 }
 
