--- a/french/pages/partials/errorCounter.html
+++ b/french/pages/partials/errorCounter.html
@@ -5,6 +5,9 @@
     </svg>
 </a>
 
+
+<a tabindex="-1" class="info-icon" href="">&#128712;</a> &#8505; &#9432;
+
 <hr />
 <footer>
     <span id="error-counter-section"></span>
@@ -17,75 +20,7 @@
             <span class="number-correct">0</span> correctes)
         </h4>
     </template>
-<!--
-    <h4 id="error-counter-" class="error-counter-line">
-        Résultat<span class="resultat-for-which-tense"></span>:
 
-        <span class="result">0</span>%
-        (<span class="number-of-errors">0</span> erreurs,
-        <span class="number-correct">0</span> correctes)
-    </h4>
-
-    <h4 id="error-counter-present" class="error-counter-line">Résultat pour le présent:
-        <span class="result">0</span>%
-        (<span class="number-of-errors">0</span> erreurs,
-        <span class="number-correct">0</span> correctes)
-    </h4>
-
-    <h4 id="error-counter-presentperfect" class="error-counter-line">Résultat pour le passé composé:
-        <span class="result">0</span>%
-        (<span class="number-of-errors">0</span> erreurs,
-        <span class="number-correct">0</span> correctes)
-    </h4>
-
-    <h4 id="error-counter-imperfect" class="error-counter-line">Résultat pour l'imparfait:
-        <span class="result">0</span>%
-        (<span class="number-of-errors">0</span> erreurs,
-        <span class="number-correct">0</span> correctes)
-    </h4>
-
-    <h4 id="error-counter-future" class="error-counter-line">Résultat pour le futur simple:
-        <span class="result">0</span>%
-        (<span class="number-of-errors">0</span> erreurs,
-        <span class="number-correct">0</span> correctes)
-    </h4>
-
-    <h4 id="error-counter-pastperfect" class="error-counter-line">Résultat pour le plus-que-parfait:
-        <span class="result">0</span>%
-        (<span class="number-of-errors">0</span> erreurs,
-        <span class="number-correct">0</span> correctes)
-    </h4>
-
-    <h4 id="error-counter-conditionalpresent" class="error-counter-line">Résultat pour le conditionnel présent:
-        <span class="result">0</span>%
-        (<span class="number-of-errors">0</span> erreurs,
-        <span class="number-correct">0</span> correctes)
-    </h4>
-
-    <h4 id="error-counter-presentsubjunctive" class="error-counter-line">Résultat pour le subjonctif présent:
-        <span class="result">0</span>%
-        (<span class="number-of-errors">0</span> erreurs,
-        <span class="number-correct">0</span> correctes)
-    </h4>
-
-    <h4 id="error-counter-conditionalperfect" class="error-counter-line">Résultat pour le conditionnel passé:
-        <span class="result">0</span>%
-        (<span class="number-of-errors">0</span> erreurs,
-        <span class="number-correct">0</span> correctes)
-    </h4>
-
-    <h4 id="error-counter-futureperfect" class="error-counter-line">Résultat pour le futur antérieur:
-        <span class="result">0</span>%
-        (<span class="number-of-errors">0</span> erreurs,
-        <span class="number-correct">0</span> correctes)
-    </h4>
-
-    <h4 id="error-counter-imperative" class="error-counter-line">Résultat pour l'impératif:
-        <span class="result">0</span>%
-        (<span class="number-of-errors">0</span> erreurs,
-        <span class="number-correct">0</span> correctes)
-    </h4>
--->
     <h4>Durée: <span id="total-time"></span></h4>
 
     <span id="stats-title">Statistiques:</span>
