--- a/french/pages/partials/errorCounter.html
+++ b/french/pages/partials/errorCounter.html
@@ -6,7 +6,7 @@
 </a>
 
 
-<a tabindex="-1" class="info-icon" href="">&#128712;</a> &#8505; &#9432;
+<a tabindex="-1" class="info-icon" href="">&#128712;</a>
 
 <hr />
 <footer>
