--- a/french/styles.css
+++ b/french/styles.css
@@ -29,7 +29,7 @@ body main.wide {
     height: 30px;
 }
 
-.info-icon {
+a.info-icon {
     position: absolute;
     right: 0.5em;
     top: 0em;
@@ -239,6 +239,7 @@ ol#stats {
 #stats .best-result,
 td.best-result {
     font-weight: bold;
+    opacity: 75%;
 }
 
 .text .span-half span {
@@ -249,6 +250,11 @@ td.best-result {
 .text .span-third span {
     display: inline-block;
     width: 32%;
+}
+
+.text .span-third span.info-icon {
+    font-size: x-large;
+    margin-left: -2em;
 }
 
 /* line for given example for exercise */
