--- a/french/styles.css
+++ b/french/styles.css
@@ -390,7 +390,9 @@ thead tr:first-child th:first-of-type {
     min-width: 5.25em;
     max-width: 5.25em;
 }
-
+thead tr:nth-of-type(3) th {
+    width: 3em;
+}
 caption {
     padding: 1em;
 }
