added XHTML validation icon

--- a/french/pages/partials/errorCounter.html
+++ b/french/pages/partials/errorCounter.html
@@ -30,3 +30,7 @@
         <li></li>
     </template>
 </footer>
+
+<a id="xhtml-validator" href="http://validator.w3.org/check/referer">
+    <img src="https://www.w3.org/html/logo/downloads/HTML5_Logo.svg" />
+</a>
