--- a/french/pages/partials/errorCounter.html
+++ b/french/pages/partials/errorCounter.html
@@ -31,6 +31,6 @@
     </template>
 </footer>
 
-<a id="xhtml-validator" href="https://validator.w3.org/check/referer">
+<a id="xhtml-validator" href="https://validator.w3.org/check/referer" referrerpolicy="unsafe-url">
     <img src="https://www.w3.org/html/logo/downloads/HTML5_Logo.svg" />
 </a>
